@@ -73,6 +73,10 @@
 - [DS-694] Add inner class to Item for more efficient metadata handling
 - [DS-695] Convert DatabaseManager to use DataSource, allow for JNDI
 - [DS-697] Allow media filter plugins to register their input formats directly
+- [DS-732] Browse performance improvements
+
+(Graham Triggs, Mark Wood)
+- [DS-707] General improvements to performance, bug fixes and style
 
 (Ben Bosman)
 - [DS-703] Making the OAI max amount of records configurable
